--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -52,8 +52,8 @@
 \newcommand*\bigcdot@[2]{\mathbin{\vcenter{\hbox{\scalebox{#2}{$\m@th#1\bullet$}}}}}
 \makeatother
 
-\title{Relating Theories of the $\lambda$-Calculus}
-\author{Dana Scott \\
+\title{\large Relating Theories of the $\lambda$-Calculus}
+\author{\normalsize Dana Scott \\
 {\small\it Merton College}\\
 {\small\it Oxford}}
 \begin{document}
@@ -88,14 +88,14 @@ The passage from sets to classes is a familiar and useful move in the formalizat
 
 \end{enumerate}
 %
-We do not have time to discuss the justification of the word "continuous" here; suffice it to say that conditions (1) and (2) are not as strict as they at first might seem. Every ordinary map $f : \V \to \V$ determines a continuous class operator by the def­inition:
+We do not have time to discuss the justification of the word "continuous" here; suffice it to say that conditions (1) and (2) are not as strict as they at first might seem. Every {\it ordinary} map $f : \V \to \V$ determines a continuous class operator by the def­inition:
 $$
 F(X) = \{f(x) \mid x \in X\}.
 $$
 %
 Furthermore, $F$ determines $f$, for we have: $y = f(x)$ if and only if $\{y\} = F(\{x\})$,
 for all $x,y \in \V$. In a suitable sense, then, nothing has been lost; but what has been gained?
-The reply is that continuous class operators can be identi­fied with classes. We could write, for instance:
+The reply is that continuous class operators can be {\it identi­fied} with classes. We could write, for instance:
 $$ F = \{(A,B) \mid A,B \in \V {\textrm { and }} A \inc F(B) \},$$
 where, say:
 $$
@@ -105,7 +105,9 @@ More in harmony with Scott (1980) would be: $F = \{(a,B) \mid  a,B \in \V {\text
 
 Either trick reduces operator theory to class theory - in the continuous case. And the same trick could be carried over to other kinds of set theory (e.g. Quine's). What we know is that operator theory gives a model for $\l$-calculus; it is a quite elementary model, too. Nice as this connection is, it is not the topic of the pre­ sent paper: we do not want to make $\l$-calculus depend on set theory, since then we have still to explain where set theory comes from. But the connection should be borne in mind.]
 
-Perhaps set theory brings in too many extraneous issues. $\V$, after all, is a massive object closed under all manner of strange operations. What we are probably seeking is a ``purer'' view of functions: a theory of functions in themselves, not a theory of functions derived from sets. What, then, is a pure theory of functions? Answer: category theory. General category theory is a very pure theory: it is the milk-and-water theory of functions under composition. This composition operation is associative and possesses neutral ele­ments (compositions of zero terms). That is about all you can say about it except to stress that it is also a rather bland theory of types. Every function $f$ has a (unique) domain and codomain, and we write:
+Perhaps set theory brings in too many extraneous issues. $\V$, after all, is a massive object closed under all manner of strange operations. What we are probably seeking is a ``purer'' view of functions: a theory of functions in themselves, not a theory of functions derived from sets. What, then, is a pure theory of functions? Answer: category theory. 
+
+{\it General} category theory is a very pure theory: it is the milk-and-water theory of functions under {\it composition}. This composition operation is associative and possesses neutral ele­ments (compositions of zero terms). That is about all you can say about it except to stress that it is also a rather bland theory of types. Every function $f$ has a (unique) {\it domain} and {\it codomain}, and we write:
 $$f: \dom f \to \cod f$$
 %
 Every possible domain is a codomain (and conversely), because if $A$ is such, then
@@ -130,17 +132,17 @@ $$
 The definition of composition is obvious. Sets, in this way, give us only one special example of a category.
 I beg forgiveness of the reader for boring him. All of this is well known to the moderately awake undergraduate in mathe­matics. Indeed, that is the point: there is plenty of evi­dence now that category theory is a natural and useful theory of functions. I do not have to rehearse the examples as they can be found in any number of books (e.g. Mac Lane (1971]).
 There is a rather important logical point to stress, however
-important for anyone who has thought about $\l$-calculus models. Category theory is very extensional. We assume as axioms the equations:
+important for anyone who has thought about $\l$-calculus models. Category theory is very {\it extensional}. We assume as axioms the {\it equations}:
 %
 $$\id_A \comp f = f \comp \id_B =  f$$
 %
 and
 $$h\comp (g \comp f) = (h \comp g) \comp f,$$
 %
-provided $A= \dom f$ and $B = \cod f$ and the double compositions are defined. These are {\it functional} equations, and they say that two functions defined in different ways are in fact {\it identical}.
+provided $A= \dom f$ and $B = \cod f$ and the double compositions are defined. These are {\it functional} equations, and they say that two functions defined in {\it different} ways are in fact {\it identical}.
 Furthermore, identical things can everywhere replace one another.
 
-This point about extensionality may not seem exciting or im­portant, but the logician should remember that, in certain intensional theories of functions, ``obvious'' definitions will not provide categories. We shall return to this point later. But is category theory the long-sought answer? No, no, not at all. Category theory {\it pure} provides nothing explicitly aside from identity functions --- and they occur only if we have some possible domain. We do get compositions if we have the neces­sary terms. Thus, as it stands, category theory has no existential import. (It was not meant to.) Set theory has "too much" existential import. (It was meant to.) What we seek is the middle way --- and an argument that the middle way is natural and general.
+This point about extensionality may not seem exciting or im­portant, but the logician should remember that, in certain {\it intensional} theories of functions, ``obvious'' definitions will not provide categories. We shall return to this point later. But is category theory the long-sought answer? No, no, not at all. Category theory {\it pure} provides nothing explicitly aside from identity functions --- and they occur only if we have some possible domain. We do get compositions if we have the neces­sary terms. Thus, as it stands, category theory has no existential import. (It was not meant to.) Set theory has ``too much'' existential import. (It was meant to.) What we seek is the middle way --- and an argument that the middle way is natural and general.
 
 There is no need to build up unnecessary suspense: the middle way is the theory of the (so called) cartesian closed categories.
 Fortunately Lambek has written extensively about the theory, and I can refer the reader to his papers for fur­ther details; I also am happy to acknowledge his writings as helping me understand what is going on. If we remark that his paper in this volume is called "From $\l$-calculus to cartesian closed categories'', then we might say that my present paper ought to be called ``From cartesian closed categories to $\l$-calculus.''
@@ -153,7 +155,7 @@ Its weak­ness lies in the fact that we are given no construction principles, no
 
 An immediate question that must come to anyone's mind con­cerns the {\it arity} of functions. The usual way of reading a map­ping statement is to take it as a statement about {\it one-place} functions, and the $\circ$ of composition is the composition of one­ place functions. This seems very restricted.
 
-People have suggested generalizing categories to multi-place functions with concomitant compositions (e.g. the book Szabo (1978)), but it does not seem the neatest solution. Much easier is to assume that the category has cartesian products - and more specifically particular representatives of the product
+People have suggested generalizing categories to {\it multi-place} functions with concomitant compositions (e.g. the book Szabo (1978)), but it does not seem the neatest solution. Much easier is to assume that the category has cartesian products - and more specifically particular representatives of the product
 domains are chosen. As a special case we will know what the cartesian power $A^n$ is for each $n=0,1,2,\cdots$, and $n$-ary functions
 are then maps $f: A^n\to B$. Not much of a surprise.
 
@@ -165,7 +167,7 @@ multiplication $\mu: B^2 \to B$ as a map in the category. (Inverse is missing as
 The precise description of products is as follows. We as­sume our category has a special domain $\bbone$ (the empty product, so $A^0 = B^0 = {\bbone}$), and for each domain $A$ a special map $\zeromap_A: A \mapsto \bbone$. (The domain $\bbone$, intuitively, has just one ``element''.)  Moreover the rule about maps is that $\zeromap_A$ is unique; that is whenever $f : A \mapsto \bbone$, then we have the equation
 $$f = \zeromap_A .$$
 %
-Concerning binary products, we have for any two domains $A$ and $B$ a special choice of a domain $A \times B$ (and so $A^{n+1} = A^n \times A$), and special maps
+Concerning {\it binary} products, we have for any two domains $A$ and $B$ a special choice of a domain $A \times B$ (and so $A^{n+1} = A^n \times A$), and special maps
 \begin{align*}
 p_{AB}&: A \times \BA\\
 q_{AB}&: A \times B \to B
@@ -188,7 +190,7 @@ q_{AB} \comp \langle f,g \rangle &= g\\
 %
 that is to say, there is an explicit one-one correspondence between the pairs of maps $f$, $g$ and the map $h$ into the product. This all now makes $A times B$ well behaved within the category.
 
-So much for a theory of tuples and multiary maps. But we still want a theory of functions: a category allows us to talk of selected functions, while we would want various equations to have a force relating to arbitrary functions. The answer to this desire is function spaces as explicit domains in the cate­ gory. Given $A$ and $B$ we want to form $(\AB)$ as a domain in its own right; if so, there are many maps that have to be set down to make the function space behave. (And here we must defi­nitely leave the category of groups.)
+So much for a theory of tuples and multiary maps. But we still want a theory of functions: a category allows us to talk of {\it selected} functions, while we would want various equations to have a force relating to {\it arbitrary} functions. The answer to this desire is {\it function spaces} as explicit domains in the cate­gory. Given $A$ and $B$ we want to form $(\AB)$ as a domain in its own right; if so, there are many maps that have to be set down to make the function space behave. (And here we must defi­nitely leave the category of groups.)
 
 In the first place there has to be an evaluation map
 $\ebc : (B \to C) \times B \to C$ with the intuitive interpretation that it is the map $ f,x \mapsto f(x)$. In the second place there has to be a map for shifting around variables; more precisely, suppose
@@ -215,7 +217,7 @@ A, (A \to A), ((A \to A) \to A), (((A \to A) \to A) \to A), \cdots
 $$
 To be able really to view these domains as function spaces, certain operations, $\ev$ and $\L$, with characteristic equations have to be laid down.
 If a \ccc\ is a theory of functions (and we include here higher-type functions), then the theory of \ccc's is the theory of types of the title of this section. It is only one such theory. ``Bigger'' theories could be obtained by demanding more types: for example we could axiomatize {\it coproduct}s (disjoint sums), $\bbzero$ and $A+ B$. We could demand infinite products and co products. We could throw in a type $\Omega$ of ``propositions'' so that higher types like $(A^n \to \Omega)$ correspond to $n$-ary predicates. This gets into topos theory (as in Johnstone (1977) or Goldblatt (1979) --- just to name two recent texts). But the bigger the theory, the more involved, and full definitions at this point would not help this discussion very much.
-We could also look for ``smaller'' theories. Some examples --- of a rather highly formal nature --- can be found in Szabo (1978) with an indication of the algebraic interest of these other type theories. However, a \ccc\ is rather more ``logical'' and good as a middle ground; further Lambek has explained the logical interest; there is a perfect correspondence between \ccc's and (extensional) typed $\l$-calculi. The reader can turn to Lambek's paper for details and references.
+We could also look for ``smaller'' theories. Some examples --- of a rather highly formal nature --- can be found in Szabo (1978) with an indication of the algebraic interest of these other type theories. However, a \ccc\ is rather more ``logical'' and good as a middle ground; further Lambek has explained the logical interest; {\it there is a perfect correspondence between \ccc's and (extensional) typed $\l$-calculi}. The reader can turn to Lambek's paper for details and references.
 
 \def\means#1{\llbracket\, #1 \,\rrbracket}
 
@@ -249,7 +251,7 @@ the same map in the category.) Of course this all has to be defined more rigorou
 No, we have to be more specitic than that. Take a \ccc\ How does it correspond to a theory (of functions)? The domains
 of the category are the types of the theory, and they are structured by the $\bbone$, $(A \times B)$, $(\AB)$ operations on types. Things like $\comp$,
 $0$, $p$, $q$, $\langle\cdot,\cdot\rangle$, $\ev$, and $\L$ stand for logical constants (or operators) --- with type subscripts as needed. Maps $f : \AB$ of the category stand for the non-logical constants of the theory.
-The equations $f = g$ between maps are the assertions of the theory. The logical axioms are those special equations common to all \ccc's --- the other equations are those that just happen to work out in the category. From this point of view the theory has no free variables: all assertions are written with constant terms. Equations with free variables can be construed as functional equations (by a heavy use of $\L$).
+The equations $f = g$ between maps are the assertions of the theory. The logical axioms are those special equations common to all \ccc's --- the other equations are those that just happen to work out in the category. From this point of view the theory has {\it no free variables}: all assertions are written with constant terms. Equations with free variables can be construed as functional equations (by a heavy use of $\L$).
 
 Conversely, a more conventional typed $\l$-calculus is an equational theory with both the familiar logical axioms as well as with non-logical axioms as desired. The equations can involve free variables. Aside from the usual deduction rules for equality, we must employ the extensionality rule
 $$
@@ -272,7 +274,7 @@ The reason that category theory is a convenient way to formalize this definition
 
 The typed $\l$-calculus is even more harmless than these last remarks suggested. By the well-known Yoneda embedding, one can prove that an arbitrary (small) category has a full and faithful embedding into a \ccc\ This means that starting with a given category and its maps, there is a precise sense in which it is consistent to close up under products and function spaces. No new maps are added co the given category; no new equations between the given maps are imposed by the adjunction of higher types. One can say even more than this about rela tive consistency, but the remark is best deferred to Section 4, where references to the proof are provided.
 
-A final remark must be added to this section to clear up a possible confusion between theories and models.
+A final remark must be added to this section to clear up a possible confusion between {\it theories} and {\it models}.
 Up to this point we have been talking about theories. In many systems of logic models can be described by theories: every model has a ``diagram'' involving constants for all the "elements" of the model and taking as axioms all statements in the language ``true'' about the model. It depends on the na,ture of the logic how hard it is to show that every ``consistent'' theory has a model.
 
 In the case of a \ccc, a domain $A$ could be said to have an ``element'' $a$ if there is a map $a: \bbone \to A$. The question is: {\it are there enough elements}? Suppose $f,g: \AB$ are two maps. If $a : \bbone \to A$, then $f \comp a: \bbone \to B$; so in a certain sense maps in the category behave as functions on elements. (This is not an original suggestion but is one well known in category theory.) It is natural to ask whether, if  $f \comp a	= g\comp a$ for all $a : \bbone \to A$, then $f = g$. If this is true in a \ccc, then it is said to have ```enough''' elements or to be concrete. In case it is concrete, domains can be identified with sets, maps with functions, products $A \times B$ in the category with the corresponding cartesian product of the sets (ask: which $c : \bbone \to A \times B$ ?), and function spaces $(\AB)$ with spaces of actual functions (be cause there is a one-one correspondence between maps $f : \AB$ and elements $e: \bbone \to (\AB)$.
@@ -288,14 +290,14 @@ More thoughts on concreteness will be brought out in Section 4.
 
 That is the (easy) passage from theories to (certain) models.
 But remember, a theory is not a model: the maps in a given
-\ccc\ are not concrete maps, they are just the definable maps in the language of the theory, and the equations between them are the ``theorems'' of the theory. It is no surprise that a given theory may not have enough definable elements: we may need to expand the stock of elements in order to have a model. For a \ccc\ we find we can. So far, so good; and this is the (known) story of typed $\l$-calculus.
+\ccc\ are not concrete maps, they are just the definable maps in the language of the theory, and the equations between them are the ``theorems'' of the theory. It is no surprise that a given theory may not have enough {\it definable} elements: we may need to expand the stock of elements in order to have a model. For a \ccc\ we find we can. So far, so good; and this is the (known) story of typed $\l$-calculus.
 
 \section{``Type Free'' Domains}
 
-In the paper of Lambek, the analogy between typed and type free is illustrated (in the obvious way), but no real connec tion or relation is established. This we shall now do, and the relationship will be deepened in the next section.
-In the first place, we shall only consider the $\l$-calculus (or $\l K$-calculus) and not the $\l \eta$-calculus; the latter can be re garded as a special case. What is needed is a notion of domain appropriate to the interpretation of the "type-free" calculus.
+In the paper of Lambek, the analogy between typed and type free is illustrated (in the obvious way), but no real {\it connection} or {\it relation} is established. This we shall now do, and the relationship will be deepened in the next section.
+In the first place, we shall only consider the $\l$-calculus (or $\l K$-calculus) and not the $\l \eta$-calculus; the latter can be regarded as a special case. What is needed is a notion of domain appropriate to the interpretation of the "type-free" calculus.
 
-In a category, a retraction between two domains $A$ and $B$ is a pair of maps $i: A	\to B$ and $j : \BA$ where $j \comp i = \id_A$. Regard $A$ as the "smaller" domain; it is injected into $B$, and $B$ is surjectively mapped onto $A$. The notion shares qualities, then, of $A$ being both a subspace of $B$ and at the same time a quotient.
+In a category, a retraction between two domains $A$ and $B$ is a pair of maps $i: A	\to B$ and $j : \BA$ where $j \comp i = \id_A$. Regard $A$ as the "smaller" domain; it is injected into $B$, and $B$ is surjectively mapped onto $A$. The notion shares qualities, then, of $A$ being both a {\it subspace} of $B$ and at the same time a {\it quotient}.
 But the injection and surjection have to be related.
 
 Now, suppose that in a cartesian closed category a domain $\U$ satisfies the condition that the function space $(\U\to \U)$ is a retract of the domain $\U$ itself. (This is always so for $\U = \bbone$, but we seek non-trivial examples.) Let the retraction maps be $i: (\U \to \U) \to \U$ and $j : \U \to (\U \to \U)$. Then $\U$ (as it sits in its category) gives us an interpretation of the type-free calculus, which we now explain.
