--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -525,7 +525,7 @@ The (rather cheap) method of adjoining indeterminates proves that every typed or
 In the typed case, we would get a many-sorted theory with a sort for each domain in the given category. As we have already pointed out, an untyped theory can always be reformulated as a typed theory by the method of retracts. So we now concentrate on typed theories --- that is to say, cartesian closed categories.
 
 But the writing down of {\it first-order} theories is not all that interesting: we clearly have nice axioms for a theory of functions, but first-order theories do not impress us as being very categorical. Such theories do not really capture the idea of the ``arbitrary'' function. We began our discussion with set theory, where the intention was that function spaces did really contain "all" functions - they did not just appear as an ``algebra'' of functions. Leaving aside for the moment the (philosophical) question of whether the desire for the {\it all} is a rational one, we can ask the (formal) question of whether there is a conservative extension result for {\it higher-order} theories. Surprisingly, category theorists have known the answer for some time.
-Now we cannot hope to embed the theory of a typed $\l$-calculus into a classical higher-order theory with a full comprehension axiom of the form
+Now we cannot hope to embed the theory of a typed $\l$-calculus into a {\it classical} higher-order theory with a full comprehension axiom of the form
 $$
 \forall x:A .\,	\exists !y: B .\,  \ffam(x,y)  \, \to  \exists f: \AB \, \forall x: A .\, \ffam(x,f(x)).
 $$
@@ -533,11 +533,11 @@ Because in higher-order logic we can prove Cantor's Theorem which implies that t
 $j : U \to	\UU$ is the one-element type. Thus, if a typed theory had such a type (and we know many), then the adding of the
 standard higher-order axioms (where we construe $(\AB)$ as the total function space of all functions) would not at all be conservative, Something else has to be tried, and the answer is higher-order intuitionistic logic.
 
-As we shall now have to consider more than one category, let me call our given \ccc\ the category $\C$. To fix ideas, the constructions to be carried out will be done in ordinary set theory - with classical logic! The models obtained, however, will only satisfy intuitionistic logic. The obvious lack of harmony can be repaired, but it would take too much explanation here.	Moreover, we are also going to assume that the given category $\C$ is a set. This is not much of a restriction, since we were thinking of Casa theory and usually a theory has a limited number of symbols in any case.
+As we shall now have to consider more than one category, let me call our given \ccc\ the category $\C$. To fix ideas, the constructions to be carried out will be done in ordinary set theory --- with classical logic! The models obtained, however, will only satisfy intuitionistic logic. The obvious lack of harmony can be repaired, but it would take too much explanation here.	Moreover, we are also going to assume that the given category $\C$ is a set. This is not much of a restriction, since we were thinking of $\C$ as a theory and usually a theory has a limited number of symbols in any case.
 
-Before saying where the intuitionistic logic comes from, let me give the construction. Let $\S$ be the category of all sets and arbitrary functions; we know it is a \ccc\  The construction we need here is the well known one of the functor category $\scop$ of all contravariant functors from $\C$ into $\S$ with the natural transformations as the maps - full definitions follow. The result is that the functor category is a model for higher order intuitionistic logic, in particular it is a \ccc; more over the original category $\C$ has a full and faithful embedding in $\S^{C^{op}}$, and this shows the conservative extension property. So much for the outline of the method, now for the details. Needless to say this represents a very early chapter in topos theory; it should be more widely known,
+Before saying where the intuitionistic logic comes from, let me give the construction. Let $\S$ be the category of all sets and arbitrary functions; we know it is a \ccc\  The construction we need here is the well known one of the {\it functor category} $\scop$ of all contravariant functors from $\C$ into $\S$ with the natural transformations as the maps - full definitions follow. The result is that the functor category is a model for higher order intuitionistic logic, in particular it is a \ccc; more over the original category $\C$ has a full and faithful embedding in $\scop\!\!$, and this shows the conservative extension property. So much for the outline of the method, now for the details. Needless to say this represents a very early chapter in topos theory; it should be more widely known,
 
-What is a contravariant functor? It is a mapping $F: \C\to \S$ that associates to every domain $A$ of $\C$ a set $F(A)$ of $\S$ and to every map $f: \BA$ of $\C$ a function $F(f) : F(A) \to F(B)$ (and note the change of order!) so that:
+What is a {\it contravariant functor}? It is a mapping $F: \C\to \S$ that associates to every domain $A$ of $\C$ a set $F(A)$ of $\S$ and to every map $f: \BA$ of $\C$ a function $F(f) : F(A) \to F(B)$ (and note the change of order!) so that:
 \begin{align*}
 F(\id_A) &= \id_{F(A)} , {\textrm{ and}}\\
 F(f \comp g) &= F(g) \comp F(f),
@@ -546,7 +546,9 @@ F(f \comp g) &= F(g) \comp F(f),
 provided $f: \BA$ and $g: C \to B$ in $\C$.
 
 It was one of the major early insights of category theory to see that the functors form
-a category in themselves. What is needed is a definition of transformation between functors. We call such maps $\nu : F \to G$ ``natural transformations'' for reasons explained in category theory books. What is a natural transformation $v : F\to G$? It is an association with every domain $A$ of $\C$ of a function $\nu_A: F(A)\to G(A)$ so that whenever $f : \BA$ in $\C$, then the following diagram commutes in $\S$:
+a category in themselves. What is needed is a definition of transformation between functors. We call such maps $\nu : F \to G$ ``natural transformations'' for reasons explained in category theory books. 
+
+What is a {\it natural transformation} $v : F\to G$? It is an association with every domain $A$ of $\C$ of a function $\nu_A: F(A)\to G(A)$ so that whenever $f : \BA$ in $\C$, then the following diagram commutes in $\S$:
 \[
   \begin{tikzcd}
     F(A) \arrow{d}{\nu_A} \arrow{r}{F(f)}  & F(B) \arrow{d}{\nu_B} \\
@@ -580,7 +582,7 @@ always a \ccc\  even if $\C$ is not. The cartesian closed structure of the funct
 
 Before getting down to details, however, some more vivid terminology might help.
 
-Think of a functor $U$ in $\scop$, following Lawvere, as a "variable domain".  That is to say, for each $A \in \C$ we have an associated domain (set) $U_A = U(A)$. The maps $f:\BA$ in $\C$ give us transitions between ``stages'' $A$ and ``later'' stages $B$; and each such transition ``restricts'' elements in
+Think of a functor $U$ in $\scop\!\!$, following Lawvere, as a "variable domain".  That is to say, for each $A \in \C$ we have an associated domain (set) $U_A = U(A)$. The maps $f:\BA$ in $\C$ give us transitions between ``stages'' $A$ and ``later'' stages $B$; and each such transition ``restricts'' elements in
 $U_A$ to elements in $U_B$ ``along'' the map $f$. To save writing, let us set $a \res f = (Uf)(a)$ when the functor $U$ is understood. That $U$ is indeed a functor comes down to these equations:
 $$
 a \res \id_A = a \,\textrm{ and }\, (a \res f) \res g = a \res (f \comp g),
@@ -602,7 +604,7 @@ $$
 {\langle \mu, \nu \rangle}_A = \langle \mu_A, \nu_A \rangle : W_A \to U_A \times V_A
 $$
 %
-Again it is obvious that these maps commute with restrictions, so ${\langle \mu, \nu \rangle}$ is natural. As all of this is pointwise; the verifi­cation of such equations as $p \comp \langle \mu, \nu \rangle = \mu$ is easy. Again suppose $U$ and $V$ are given. In defining $(U \to V)$, we cannot be quite as pointwise. That is, $(U \to V)_A$ cannot be taken simply as the set of functions $(U_A \to V_A)$, the function space in sets. The reason, roughly, is that when we have a function at one stage, we also have to know how it restricts at later stages; a simple mapping from $U_A$ into $V_A$ does not give us enough information for that. When $f : \BA$, restriction on
+Again it is obvious that these maps commute with restrictions, so ${\langle \mu, \nu \rangle}$ is natural. As all of this is pointwise; the verifi­cation of such equations as $p \comp \langle \mu, \nu \rangle = \mu$ is easy. Again suppose $U$ and $V$ are given. In defining $(U \to V)$, we cannot be quite as pointwise. That is, $(U \to V)_A$ cannot be taken simply as the set of functions $(U_A \to V_A)$, the function space in sets. The reason, roughly, is that when we have a function at {\it one} stage, we also have to know how it restricts at {\it later} stages; a simple mapping from $U_A$ into $V_A$ does not give us enough information for that. When $f : \BA$, restriction on
 $U_A$ maps into $U_B$; this is the wrong direction for us to be able to pass from an arbitrary function defined on $U_A$ to one defined on $U_B$. So an element of $(U \to V)_A$ has to be a whole {\it family} of functions:
 $$
 \ffam_f: U_B \to V_B
@@ -715,7 +717,7 @@ $$
 This proves that the family $\tau_f$ lies in $(H_A \to H_B)_C$. It has to be left without proof that these two correspondences are in­ verse to one another and provide a natural isomorphism.
 
 Well, this is a rather heavy construction starting from one little category $\C$. The question: what does it prove? Why worry about the functor category? The answer is that the func­tors give an interpretation of higher-order logic, as we hinted earlier, and now we have to pay up and demonstrate
-how to con­strue logical formulae. The idea from topos theory when spe­cialized to the functor category looks very much like Kripke models of intuitionistic logic - except that the ``times'' form a category $\C$ rather than just a partially ordered set, as has often been emphasized by Lawvere (see, e.g. Lawvere (1975)).
+how to con­strue logical formulae. The idea from topos theory when spe­cialized to the functor category looks very much like Kripke models of intuitionistic logic --- except that the ``times'' form a category $\C$ rather than just a partially ordered set, as has often been emphasized by Lawvere (see, e.g. Lawvere (1975)).
 
 To make the logical language more definite, let us think of the domains $A$ in $\C$ as being (in a one-one correspondence with) type symbols. Introduce new type symbols built from the ones
 in $\C$ (the "ground" types) by forming $\bbone$, $(T \times S)$, $(T\to S)$, $\P T$ for all type symbols. (Note: $A \times B$ in $\C$ is being distinguished
